[gd_scene load_steps=3 format=3 uid="uid://c8qxr6j22yvdgx"]

[ext_resource type="Script" uid="uid://cp5ietvjlkovm" path="res://scripts/ui/battle_ui_controller.gd" id="1_yvnqm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8jnxu"]
bg_color = Color(0.12549, 0.12549, 0.12549, 0.901961)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.301961, 0.301961, 0.301961, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.25098)
shadow_size = 4
shadow_offset = Vector2(2, 2)

[node name="BattleUIController" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yvnqm")

[node name="BattleControls" type="HBoxContainer"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
grow_horizontal = 0

[node name="SpeedLabel" type="Label"]
layout_mode = 2
text = "速度: 1.0x"

[node name="SpeedSlider" type="HSlider"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 4
min_value = 0.5
max_value = 3.0
step = 0.5
value = 1.0
ticks_on_borders = true

[node name="BattleInfo" type="VBoxContainer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 86.0
grow_horizontal = 2

[node name="RoundLabel" type="Label"]
layout_mode = 2
text = "回合: 1"
horizontal_alignment = 1

[node name="TimerLabel" type="Label"]
layout_mode = 2
text = "时间: 01:30"
horizontal_alignment = 1

[node name="BattleStatsPanel" type="Panel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8jnxu")

[node name="StatsContainer" type="VBoxContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="StatsTitle" type="Label"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "战斗结果"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator"]
layout_mode = 2

[node name="CloseButton" type="Button"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -40.0
offset_right = 50.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
text = "关闭"

[connection signal="pressed" from="BattleStatsPanel/CloseButton" to="." method="_on_close_button_pressed"]
